--- a/Data/projects.json
+++ b/Data/projects.json
@@ -2,7 +2,7 @@
   {
     "id": 1,
     "title": "Portfolio Website",
-    "description": "A personal portfolio website to showcase my skills and projects.",
+    "description": "I’ve refreshed my personal website to make it more visual, accessible, and current.",
     "image": null,
     "featured": false,
     "background": "linear-gradient(135deg, #12345B, #2A7AD5)",
@@ -42,7 +42,7 @@
   {
     "id": 3,
     "title": "Means",
-    "description": null,
+    "description": "(FP Final Proyect) Social platform that connects people seeking resources with investors and collaborators ready to help.",
     "image": "../Images/Proyects/MeansCompleto.png",
     "featured": false,
     "background": "linear-gradient(135deg, #0052D4, #4364F7)",
@@ -60,7 +60,7 @@
   {
     "id": 4,
     "title": "Book-Shop-JPA",
-    "description": null,
+    "description": "(FP Proyect) Backend application for a book shop built with Java, JPA, and MySQL.",
     "image": null,
     "featured": false,
     "background": "linear-gradient(135deg, #00c6ff, #0072ff)",
@@ -74,7 +74,7 @@
   {
     "id": 5,
     "title": "UnitedMotorsports",
-    "description": null,
+    "description": "(FP Proyect) A motorsport website featuring Formula 1 and MotoGP sections.",
     "image": "../Images/Proyects/UnitedMotorsportsCompleto.png",
     "featured": false,
     "background": "linear-gradient(135deg, #4b6cb7, #182848)",
@@ -88,7 +88,7 @@
   {
     "id": 6,
     "title": "ApiConsults",
-    "description": null,
+    "description": "A web application demonstrating asynchronous API calls using AJAX and Fetch.",
     "image": "../Images/Proyects/ApiConsults.png",
     "featured": false,
     "background": "linear-gradient(135deg, #000428, #004e92)",
@@ -106,7 +106,7 @@
   {
     "id": 7,
     "title": "ToDoList",
-    "description": null,
+    "description": "A simple To-Do List application for managing daily tasks.",
     "image": "../Images/Proyects/ToDoList.png",
     "featured": false,
     "background": "linear-gradient(135deg, #1e3c72, #2a5298)",
